<resources>
    <string name="app_name">QuickCalc</string>
    <string name="btn_clear">C</string>
    <string name="btn_backspace">⌫</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multiply">×</string>
    <string name="btn_minus">−</string>
    <string name="btn_plus">+</string>
    <string name="btn_equals">=</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="err_divide_by_zero">Cannot divide by zero</string>
    <string name="err_invalid_expression">Invalid format</string>
</resources>